[package]
name = "tracing-log-jaeger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["ansi", "env-filter", "fmt"] }
tracing-opentelemetry= "0.22.0"
opentelemetry-jaeger = "0.20.0"
opentelemetry_sdk = "0.21.2"
opentelemetry = "0.21.0"